--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet">
+    <script src="./javascript.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="./javascript.js"></script>
+
 </body>
 </html>
